# skill-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sm_cli/: __init__.py  agents.json  cli.py  core.py  deploy.py  display.py  profiles.py  skills.py
