[project]
name = "sm-cli"
version = "0.1.0"
description = "Agent Skill Manager — manage skills for Claude Code, Codex, and other AI coding agents"
requires-python = ">=3.14"
dependencies = [
]

[project.scripts]
sm = "sm_cli.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel.force-include]
"src/sm_cli/agents.json" = "sm_cli/agents.json"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_cli"]
